# organismesantepublique

./: .gitattributes  Marivat_David_1_notebook_organisme_sante_publique_022025.ipynb  Marivat_David_2_notebook_organisme_sante_publique_022025.ipynb  Marivat_David_3_notebook_organisme_sante_publique_022025.ipynb  Marivat_David_4_notebook_organisme_sante_publique_022025.ipynb  Marivat_David_5_notebook_organisme_sante_publique_022025.ipynb  Marivat_David_6_notebook_organisme_sante_publique_022025.ipynb  myFonctions.py  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md  myFonctions-checkpoint.py
data/: openfoodfacts.csv
