[tool.poetry]
name = "organismesantepublique"
version = "0.1.0"
description = ""
authors = ["david <david.marivat-larose@orange.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.2.2"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
mlflow = "^2.20.1"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
chardet = "^5.2.0"
scipy = "^1.15.2"
statsmodels = "^0.14.4"
pylint = "^3.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
